# hemisphere

./: .clippy.toml  .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  TODO.md  clippy.toml  design.md  rustfmt.toml
.github/workflows/: ci.yml
hemisphere-agent/: build-without-msi.bat  create_simple_icon.sh  generate_icons.py  index.html  package-lock.json  package.json  run-portable.bat  run-tauri.bat  set-proxy-cert.bat  tsconfig.json  vite.config.ts
hemisphere-agent/.cargo/: config.toml
hemisphere-agent/coverage/: clover.xml  coverage-final.json  index.html
hemisphere-agent/coverage/src/: App.tsx.html  index.html  main.tsx.html
hemisphere-agent/coverage/src/components/: Character.tsx.html  ContextMenu.tsx.html  SpeechBubble.tsx.html  index.html
hemisphere-agent/coverage/src/hooks/: index.html  useMessageRotation.ts.html
hemisphere-agent/src/: App.test.tsx  App.tsx  index.html
hemisphere-agent/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
hemisphere-agent/src-tauri/icons/: create_minimal_ico.py
hemisphere-agent/src-tauri/src/: lib.rs  llm.rs  main.rs  tray_icon.rs
hemisphere-agent/src-tauri/tests/: tray_icon_test.rs
hemisphere-agent/src/components/: Character.tsx  ChatHistory.tsx  ContextMenu.tsx  SpeechBubble.tsx  TextInput.tsx
hemisphere-agent/src/hooks/: useMessageRotation.ts
hemisphere-agent/src/styles/: App.css  index.css
hemisphere-agent/src/test/: setup.ts
hemisphere-agent/src/types/: Message.ts
hemisphere-wm/: Cargo.toml
hemisphere-wm/src/: lib.rs  main.rs  platform.rs  window_manager.rs
