[workspace]
members = [
    "hemisphere-wm",
]
exclude = [
    "hemisphere-agent",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Hemisphere Contributors"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/taiki3/hemisphere"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "2.0"