[package]
name = "hemisphere-wm"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "hemisphere_wm"
path = "src/lib.rs"

[[bin]]
name = "hemisphere-wm"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true

# Window management dependencies (platform-specific)
[target.'cfg(target_os = "linux")'.dependencies]
x11rb = "0.13"
xcb = "1.3"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Dwm",
] }

# MCP server dependencies
jsonrpc-core = "18.0"
jsonrpc-tcp-server = "18.0"