[package]
name = "hemisphere-agent"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true

tauri = { version = "1.5", features = ["shell-open"] }

# MCP client dependencies
jsonrpc-core = "18.0"
jsonrpc-core-client = "18.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]