[package]
name = "hemisphere-agent"
version = "0.1.0"
authors = ["Hemisphere Contributors"]
edition = "2021"
license = "MIT OR Apache-2.0"

# このプロジェクトを親ワークスペースから独立させる
[workspace]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "2.0"

tauri = { version = "1.6", features = ["shell-open", "system-tray"] }

# MCP client dependencies
jsonrpc-core = "18.0"
jsonrpc-core-client = "18.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]